Add initial GenericCrudController, GenericService, GenericRepository imp